--- a/package.json
+++ b/package.json
@@ -8,5 +8,6 @@
     "css-brunch": ">= 1.0 < 1.8",
     "javascript-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": ">= 1.0 < 1.8"
-  }
+  },
+  "license": "MIT"
 }
