--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "repository": {},
   "dependencies": {
+    "axis": "^0.5.2",
     "babel-brunch": "^5.1.1",
     "brunch": "^1.8.5",
     "clean-css-brunch": ">= 1.0 < 1.8",
