--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "repository": {},
   "dependencies": {
     "babel-brunch": "^5.1.1",
-    "brunch": "^1.8.5",
-    "clean-css-brunch": ">= 1.0 < 1.8",
-    "css-brunch": ">= 1.0 < 1.8",
-    "javascript-brunch": ">= 1.0 < 1.8",
+    "brunch": "^2.0.0",
+    "clean-css-brunch": "^1.8.0",
+    "css-brunch": "^1.7.0",
+    "javascript-brunch": "^1.8.0",
     "jeet": "^6.1.2",
     "rupture": "^0.6.1",
     "stylus-brunch": "^1.8.1",
-    "uglify-js-brunch": ">= 1.0 < 1.8"
+    "uglify-js-brunch": "^1.7.0"
   },
   "license": "MIT"
 }
